Prueba con otra forma de llamar a runtime.exec (array de strings). Se pone a fuego el puerto 2002 para conectarse a OpenOffice